--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 remote_theme: jekyll-theme-tufte
 title: Filderstadt Chronicles
-author: Your Name
-description: "Historical and Cultural Chronicles of Filderstadt"
-baseurl: ""
-url: ""
+description: Historical and Cultural Chronicles of Filderstadt
+theme: jekyll-theme-minimal
+baseurl: "/filderstadt.github.io"
+url: "https://elphan45.github.io"
 
 # Build settings
 markdown: kramdown
