Update baseurl in config and use Liquid variable for URL redirection in index.html

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Filderstadt Chroniken
 description: "Historische und kulturelle Chroniken aus Filderstadt – professionell und modern präsentiert."
 theme: jekyll-theme-modernist
-baseurl: "/filderstadt.github.io"
+baseurl: ""
 url: "https://elphan45.github.io"
 lang: de
 markdown: kramdown
