replace Liquid theme import with static import

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Wind Energy Insights"
 description: "Comprehensive insights on wind energy, focusing on the loads and challenges experienced by wind turbines."
-theme: jekyll-theme-modernist
+#theme: jekyll-theme-modernist
 baseurl: ""  # Set to empty for username.github.io sites
 url: "https://elphan45.github.io"
 lang: de
