Add webrick gem for Jekyll 4.x compatibility and update site configuration

--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,22 @@
 title: "Wind Energy Insights"
-description: "Comprehensive insights on wind energy, focusing on the loads and challenges experienced by wind turbines."
-#theme: jekyll-theme-modernist
-baseurl: ""  # Set to empty for username.github.io sites
+description: "Comprehensive insights on wind energy..."
+theme: jekyll-theme-modernist  # Uncomment this
+baseurl: ""
 url: "https://elphan45.github.io"
 lang: de
+
 markdown: kramdown
 kramdown:
   input: GFM
   math_engine: mathjax
+
 future: false
 include:
   - _posts
+
 plugins:
   - jekyll-seo-tag
-exclude: []
+
+# Modernist theme needs this empty section
+modernist:
+  # Custom variables can go here
